--- a/src/Pim/Bundle/UIBundle/Resources/views/Form/pim-fields.html.twig
+++ b/src/Pim/Bundle/UIBundle/Resources/views/Form/pim-fields.html.twig
@@ -391,6 +391,10 @@
     {{ block('form_row_field') }}
 {% endblock %}
 
+{% block pim_ajax_reference_data_row %}
+    {{ block('form_row_field') }}
+{% endblock %}
+
 {% block oro_date_widget %}
     {% set attr = attr|merge({ 'class': (attr.class is defined ? attr.class ~ ' ' : '') ~ 'datepicker', 'placeholder': placeholder|trans }) %}
     {% if form.vars.disabled %}
